# unit_test_c

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  good.c  good.h  main.c
tests/: CMakeLists.txt  check_good.c
